# fractalexplorer

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  README.md  configure.ac  default.frpath  example.frpath  fractalexplorerconfig.h.in  install_jetsonTX2.sh  install_mac.sh  install_macos.sh  install_ubuntu.sh  macos_nvcc  requirements.txt
custom_m4/: sdl2.m4
src/: .Makefile.swp  .calc_c.c.swp  .calc_cuda.cu.swp  .color.c.swp  .fractalexplorer-calc_c.o.swp  .fractalexplorer.c.swp  .log.h.swp  .mandelbrot.c.swp  .mandelbrot_calc_c.c.swp  .mandelbrot_calc_cuda.cu.swp  .render.c.swp  CMakeLists.txt  Makefile  Makefile.am  bitmap_dump.glsl  calc_c.c  calc_c.h  calc_cuda.cu  calc_cuda.h  color.c  color.h  commloop.c  commloop.h  compute_C.c  control_loop.c  control_loop.h  engine_c.c  engine_c.h  engine_cuda.cu  engine_cuda.h  fr.h  fractalexplorer.c  fractalexplorer.h  log.c  log.h  mandelbrot.c  mandelbrot.h  mandelbrot_calc_c.c  mandelbrot_calc_c.h  mandelbrot_calc_cuda.cu  (+18 more)
src/.deps/: mandelbrot-color.Po  mandelbrot-log.Po  mandelbrot-mandelbrot.Po  mandelbrot-mandelbrot_calc_c.Po  mandelbrot-mandelbrot_render.Po
src/FontCache/: README.md  SDL_FontCache.c  SDL_FontCache.h
src/controllers/: logitech_dualaction.h  logitech_f310.h  snes_usb.h
